# imagenesmail_read

./: .gitignore  .pypirc  .readthedocs.yaml  LICENSE  Readme.md  main.py  pyproject.toml  requirements.txt
docs/source/: ImagenesMail_rcanessa.rst  conf.py  index.rst  modules.rst
src/ImagenesMail_rcanessa/: images.py  mymail.py
tests/: tests.py
