[build-system]
requires=["setuptools>=65.5.0","Pillow>=10.0.1","requests>=2.31.0","urllib3>=2.0.6"]
build-backend = "setuptools.build_meta"
[project]
name="ImagenesMail_rcanessa"
version="0.0.2"
description = "La biblioteca permite descargar y visualizar imágenes y enviar correos electrónicos con mensajes simples o contenido adjunto"
authors = [
    {name="Raul Canessa Castañeda", email="rcanessa@gmail.com"}
]
readme = "Readme.md"
requires-python = ">=3.10"
[project.urls]
"Homepage"="https://github.com/rcascta1977/images_mail.git"




